--- a/index.html
+++ b/index.html
@@ -1,39 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-
-  Features
-  Company
-  Careers
-  About
-
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <header class="header">
+    <div class="wrapper">
+      <div class="logo">
+        <h1>snap</h1>
+        <img src="images/logo.svg" alt="">
+      </div>
+      <button class="nav-toggle"></button>
+      <div class="nav-sidebar">
+        <nav class="nav">
+          <ul class="nav-content">
+            <li class="nav-item">Features<span class="arrow"></span>
+              <ul class="submenu submenu-feature">
+                <li class="menu-item"><a href="#"><span class="icon icon-todo"></span>Todo List</a></li>
+                <li class="menu-item"><a href="#"><span class="icon icon-calendar"></span>Calendar</a></li>
+                <li class="menu-item"><a href="#"><span class="icon icon-reminder"></span>Reminders</a></li>
+                <li class="menu-item"><a href="#"><span class="icon icon-planning"></span>Planning</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">Company<span class="arrow"></span>
+              <ul class="submenu submenu-company">
+                <li class="menu-item"><a href="#">History</a></li>
+                <li class="menu-item"><a href="">Our Team</a></li>
+                <li class="menu-item"><a href="">Blog</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a href="#">Careers</a></li>
+            <li class="nav-item"><a href="#">About</a></li>
+          </ul>
+        </nav>
+        <div class="login">
+          <a href="#" class="login-btn">Login</a>
+          <a href="#" class="register-btn">Register</a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main class="main">
+    <div class="wrapper">
+      <img src="images/image-hero-mobile.png" alt="" class="banner">
+      <div class="main-content">
+        <h2 class="main-title">Make remote work</h2>
+        <p class="main-intro">
+          Get your team in sync, no matter your location. Streamline processes,
+          create team rituals, and watch productivity soar.
+        </p>
+        <a href="#" class="more">Learn more</a>
+        <div class="client">
+          <a href="#"><img src="images/client-databiz.svg" alt=""></a>
+          <a href="#"><img src="images/client-audiophile.svg" alt=""></a>
+          <a href="#"><img src="images/client-meet.svg" alt=""></a>
+          <a href="#"><img src="images/client-maker.svg" alt=""></a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer> 
+  <script src="js/main.js"></script>
 </body>
+
 </html>
