--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+    <div class="wrapper">
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+      </div>
     </div>
-  </footer> 
+  </footer>
   <script src="js/main.js"></script>
 </body>
 
